# diplomacyai

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
bots/: __init__.py  comparisonbot.py  connect.py  crewbot.py  crewbot_example.py  dummy_bot.py  run_comparisonbot.sh
bots/agents/: __init__.py  game_state_assessor_agent.py  order_agent.py  taunt_agent.py
bots/crews/: __init__.py  adapters.py  pick_best_orders_crew.py  random_orders_crew.py
bots/instrumentation/: __init__.py  langfuse_otel.py
bots/notebooks/: bundlesearch.ipynb  test.ipynb
bots/tests/: test_crew_adapters.py  test_get_tactical_move_annotations_tool.py  test_get_tactical_order_bundle_tool.py  test_random_orders.py  test_tactical_annotations.py  test_tactical_bundle_csv_logging.py  test_tactical_bundle_selection.py
bots/tools/: __init__.py  get_game_snapshot.py  get_position_metrics.py  get_random_order.py  get_random_order_candidates.py  get_tactical_move_annotations.py  get_tactical_order_bundle.py  move_validation.py  send_message.py
bots/utils/: __init__.py  crew_output.py  game_state.py  random_orders.py
diplomacy/engine/: game.py
diplomacy/maps/: hex3x3.map  hex3x3_france_austria.map
diplomacy/server/: bundle_search_logs.py  run.py  server.py  server_game.py
diplomacy/tests/: test_server_dummy_dispatch.py
diplomacy/utils/: game_phase_data.py  strings.py
diplomacy/web/: convert_svg_maps_to_react.sh  package.json  pnpm-lock.yaml
spec/: __init__.py  bundle_scoring_harness.py  bundle_search_probe.py  pick_best_orders_crew.py  test_bundle_scoring_harness.py
(+44 files in other folders)
