[project]
name = "diplomacy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "coloredlogs>=15.0.1",
    "crewai[tools]",
    "dotenv>=0.9.9",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "tornado>=5.0",
    "tqdm>=4.67.3",
    "ujson>=5.11.0",
]

[dependency-groups]
dev = [
    "bcrypt>=5.0.0",
    "coloredlogs>=15.0.1",
    "diplomacy",
    "pylint>=2.3.0",
    "pytest>=4.4.0",
    "pytest-xdist>=3.8.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "sphinx>=9.1.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.1.0",
    "tornado>=5.0",
    "tqdm>=4.67.3",
    "ujson>=5.11.0",
]

[tool.uv.sources]
diplomacy = { workspace = true }
